After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739971 - When firewall zone configured, presenting connection editor window causes segfault
When firewall zone configured, presenting connection editor window causes seg...
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-11 16:20 UTC by Tim Waugh
Modified: 2015-02-10 11:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Git-format patch against gnome-3-14 (1.35 KB, patch)
2014-11-11 16:20 UTC, Tim Waugh
committed Details | Review

Description Tim Waugh 2014-11-11 16:20:14 UTC
Created attachment 290424 [details] [review]
Git-format patch against gnome-3-14

Original report:
  https://bugzilla.redhat.com/show_bug.cgi?id=1162667

There is some memory mismanagement in firewall-helpers.c. Fix attached.

The call to nm_setting_connection_get_zone() returns a pointer to
memory that will be freed before the D-Bus reply handler is called.
Make sure to take a copy of the string, and free it when finished.

It looks like this problem is in gnome-3-10 and all subsequent branches.
Comment 1 Bastien Nocera 2014-11-12 11:44:42 UTC
Review of attachment 290424 [details] [review]:

Looks good.