network: Allocate storage for zone name during D-Bus call

The call to nm_setting_connection_get_zone() returns a pointer to
memory that will be freed before the D-Bus reply handler is called.
Make sure to take a copy of the string, and free it when finished.

https://bugzilla.gnome.org/show_bug.cgi?id=739971